[package]
name = "leaderchip-etcd"
version = "0.1.0"
authors = ["Mauro Rocchi <maurocchi@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
etcd-client = "0.5"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
testcontainers = "0.12.0"
tracing-subscriber = "0.2.0"