[package]
name = "leaderchip-etcd"
version = "0.1.0"
authors = ["Mauro Rocchi <maurocchi@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
etcd-client = "0.6"
tokio = { version = "1.2", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
once_cell = "1.5.2"
testcontainers = "0.12"
tracing-subscriber = "0.2"
